impl memory primitives (#14)
* update to the memory builders
* on COPY primitive
the impl is a deviation from jonesforth.
since bjforth only allows access to memory "objects" and not bytes,
i repurposed `COPYBYTE` (`C!C@`) to work w/ "objects."