@@ -93,7 +93,7 @@ tasks.withType(JavaCompile).configureEach {
   options.encoding = 'UTF-8'
   options.incremental = true
   options.release.set(17)
-  options.compilerArgs << '-Xlint:deprecation' << '-Xlint:unchecked' << '-parameters'
+  options.compilerArgs << '-Xlint:deprecation' << '-Xlint:unchecked' << '-parameters' << '--enable-preview'
   dependsOn 'spotlessApply'
 }
 
